# ros2_mediapipe

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test.yml  deploy-debian-nightly.yml  deploy-debian-stable.yml  deploy-debian.yml
scripts/: pose_detector.py
