<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mediapipe_ros</name>
  <version>0.1.0</version>
  <description>MediaPipe wrapper for a ROS project</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <url>https://github.com/threeal/ros2_mediapipe</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
